@@ -13,8 +13,6 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-
 import org.apache.solr.common.SolrDocument;
 import org.apache.solr.common.SolrInputDocument;
 import org.roda.core.RodaCoreFactory;
@@ -147,7 +145,7 @@ public class AIPCollection extends AbstractSolrCollection<IndexedAIP, AIP> {
   @Override
   public SolrInputDocument toSolrDocument(AIP aip, IndexingAdditionalInfo info)
     throws RequestNotValidException, GenericException, NotFoundException, AuthorizationDeniedException {
-    boolean safemode = info.getFlags().contains(Flags.SAFE_MODE_ON);
+    boolean safeMode = info.getFlags().contains(Flags.SAFE_MODE_ON);
     SolrInputDocument doc = super.toSolrDocument(aip, info);
 
     doc.addField(RodaConstants.AIP_PARENT_ID, aip.getParentId());
@@ -167,14 +165,13 @@ public class AIPCollection extends AbstractSolrCollection<IndexedAIP, AIP> {
 
       if (aip.getDisposal().getHolds() != null) {
         List<DisposalHoldAIPMetadata> holds = aip.getDisposal().getHolds();
-        doc.addField(RodaConstants.AIP_DISPOSAL_HOLDS_ID,
-          holds.stream().map(DisposalHoldAIPMetadata::getId).collect(Collectors.toList()));
+        doc.addField(RodaConstants.AIP_DISPOSAL_HOLDS_ID, holds.stream().map(DisposalHoldAIPMetadata::getId).toList());
       }
 
       if (aip.getDisposal().getTransitiveHolds() != null) {
         List<DisposalTransitiveHoldAIPMetadata> transitiveHolds = aip.getDisposal().getTransitiveHolds();
         doc.addField(RodaConstants.AIP_TRANSITIVE_DISPOSAL_HOLDS_ID,
-          transitiveHolds.stream().map(DisposalTransitiveHoldAIPMetadata::getId).collect(Collectors.toList()));
+          transitiveHolds.stream().map(DisposalTransitiveHoldAIPMetadata::getId).toList());
       }
 
       if (aip.getDisposal().getConfirmation() != null) {
@@ -192,12 +189,11 @@ public class AIPCollection extends AbstractSolrCollection<IndexedAIP, AIP> {
     doc.addField(RodaConstants.INGEST_UPDATE_JOB_IDS, aip.getIngestUpdateJobIds());
 
     List<String> descriptiveMetadataIds = aip.getDescriptiveMetadata().stream().map(DescriptiveMetadata::getId)
-      .collect(Collectors.toList());
+      .toList();
 
     doc.addField(RodaConstants.AIP_DESCRIPTIVE_METADATA_ID, descriptiveMetadataIds);
 
-    List<String> representationIds = aip.getRepresentations().stream().map(Representation::getId)
-      .collect(Collectors.toList());
+    List<String> representationIds = aip.getRepresentations().stream().map(Representation::getId).toList();
     doc.addField(RodaConstants.AIP_REPRESENTATION_ID, representationIds);
     doc.addField(RodaConstants.AIP_HAS_REPRESENTATIONS, !representationIds.isEmpty());
 
@@ -206,7 +202,7 @@ public class AIPCollection extends AbstractSolrCollection<IndexedAIP, AIP> {
       aip.getHasShallowFiles() != null ? aip.getHasShallowFiles() : false);
 
     ModelService model = RodaCoreFactory.getModelService();
-    if (!safemode) {
+    if (!safeMode) {
       SolrUtils.indexDescriptiveMetadataFields(RodaCoreFactory.getModelService(), aip.getId(), null,
         aip.getDescriptiveMetadata(), doc);
     }
@@ -287,9 +283,8 @@ public class AIPCollection extends AbstractSolrCollection<IndexedAIP, AIP> {
 
     @Override
     public List<Flags> getFlags() {
-      return Arrays.asList(safeMode ? Flags.SAFE_MODE_ON : Flags.SAFE_MODE_OFF);
+      return List.of(safeMode ? Flags.SAFE_MODE_ON : Flags.SAFE_MODE_OFF);
     }
-
   }
 
   @Override
@@ -320,8 +315,8 @@ public class AIPCollection extends AbstractSolrCollection<IndexedAIP, AIP> {
     final Boolean hasShallowFiles = SolrUtils.objectToBoolean(doc.get(RodaConstants.AIP_HAS_SHALLOW_FILES),
       Boolean.FALSE);
 
-    final String title = titles.isEmpty() ? null : titles.get(0);
-    final String description = descriptions.isEmpty() ? null : descriptions.get(0);
+    final String title = titles.isEmpty() ? null : titles.getFirst();
+    final String description = descriptions.isEmpty() ? null : descriptions.getFirst();
 
     final Date createdOn = SolrUtils.objectToDate(doc.get(RodaConstants.AIP_CREATED_ON));
     final String createdBy = SolrUtils.objectToString(doc.get(RodaConstants.AIP_CREATED_BY), "");
@@ -358,7 +353,7 @@ public class AIPCollection extends AbstractSolrCollection<IndexedAIP, AIP> {
     if (ghost) {
       level = RodaConstants.AIP_GHOST;
     } else {
-      level = levels.isEmpty() ? null : levels.get(0);
+      level = levels.isEmpty() ? null : levels.getFirst();
     }
 
     ret.setType(type);
@@ -397,5 +392,4 @@ public class AIPCollection extends AbstractSolrCollection<IndexedAIP, AIP> {
 
     return ret;
   }
-
 }
